welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: ';' expected but ')' found.
  } else if (b>=10 && b<=20) && (a<10 && a>20)){
                                              ^